# OpenBCI_GUI

OpenBCI_GUI/modularized/: README.md
OpenBCI_GUI/modularized/core_signal/: SignalEmbedPort.pde
modelize-rs/: Cargo.toml
modelize-rs/src/: buffer.rs  error.rs  fft.rs  lib.rs  pipeline.rs  plot.rs  source.rs
